generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum ExamType {
  MIDTERM
  FINAL
  MAKEUP
}

// Phase 7 (task 7.10) — role hierarchy used by the RBAC middleware. The
// default is STUDENT so every existing user keeps their current access.
// HOCA + TUTOR are opt-in upgrades (HOCA via email-domain verification,
// TUTOR via profile application + SUPER_ADMIN approve). UNIVERSITY_ADMIN
// is provisioned per `UniversityAccount` row. SUPER_ADMIN is internal
// operator access — set manually via a DB update.
enum UserRole {
  STUDENT
  HOCA
  TUTOR
  UNIVERSITY_ADMIN
  SUPER_ADMIN
}

model User {
  id               String            @id @default(uuid())
  email            String            @unique
  password         String
  name             String
  university       String?
  department       String?
  subscriptionTier String            @default("free")
  reviewFrequency  String            @default("daily")
  createdAt        DateTime          @default(now())
  exams            Exam[]
  ratings          ProfessorRating[]
  aiCallLogs       AICallLog[]
  aiFeedback       AIFeedback[]
  studentNotes     StudentNote[]
  studyPacks       StudyPack[]
  mockExams        MockExam[]
  mockExamSessions MockExamSession[]

  credit          UserCredit?
  examApprovals   ExamApproval[]
  questionVotes   QuestionVote[]
  postExamReports PostExamReport[]
  studyGroups     StudyGroup[]     @relation("StudyGroupMembers")

  academicDNA       AcademicDNA?
  confidenceScores  ConfidenceScore[]
  gradeRecords      GradeRecord[]
  spacedRepetitions SpacedRepetition[]

  // Phase 6 (6.8)
  voiceSessions VoiceSession[]
  voiceUsage    VoiceUsage[]
  ocrResults    OCRResult[]
  pushDevices   PushDevice[]
  pushOptIn     Boolean        @default(false)

  // Phase 7 (7.10) — role + soft-tenant pointer. Role drives RBAC; a
  // null `universityAccountId` means the user isn't attached to a B2B
  // tenant (the standard B2C path). Hard multi-tenancy (separate
  // schemas per university) is Phase 8+ enterprise work.
  role                UserRole           @default(STUDENT)
  universityAccountId String?
  universityAccount   UniversityAccount? @relation(fields: [universityAccountId], references: [id], onDelete: SetNull)

  tutor                Tutor?
  tutoringAsStudent    TutoringSession[] @relation("TutoringAsStudent")
  marketplaceItems     MarketplaceItem[]
  marketplaceApprovals MarketplaceItem[] @relation("MarketplaceApprovedBy")
  payments             Payment[]

  @@index([universityAccountId])
  @@index([role])
  @@map("users")
}

model Professor {
  id            String                 @id @default(uuid())
  name          String
  department    String
  university    String
  createdAt     DateTime               @default(now())
  courses       Course[]
  ratings       ProfessorRating[]
  styleProfile  ProfessorStyleProfile?
  studyPacks    StudyPack[]
  mockExams     MockExam[]
  voiceSessions VoiceSession[]

  @@map("professors")
}

model Course {
  id           String        @id @default(uuid())
  name         String
  code         String
  professorId  String
  professor    Professor     @relation(fields: [professorId], references: [id], onDelete: Cascade)
  createdAt    DateTime      @default(now())
  exams        Exam[]
  studentNotes StudentNote[]

  @@map("courses")
}

model Exam {
  id           String        @id @default(uuid())
  courseId     String
  course       Course        @relation(fields: [courseId], references: [id], onDelete: Cascade)
  examType     ExamType
  year         Int
  semester     String
  fileUrl      String
  uploadedById String
  uploadedBy   User          @relation(fields: [uploadedById], references: [id], onDelete: Cascade)
  createdAt    DateTime      @default(now())
  analysis     ExamAnalysis?

  // Phase 4 — community verification.
  // `verified` flips to true when ≥3 distinct users (not the uploader) cast
  // approvals; `flagged` flips when ≥3 distinct users cast a downvote.
  // Verified exams are the only ones the style profile service considers
  // as canonical — unverified ones still aggregate but with lower trust.
  verified   Boolean   @default(false)
  verifiedAt DateTime?
  flagged    Boolean   @default(false)

  approvals ExamApproval[]

  @@map("exams")
}

model ExamAnalysis {
  id                String   @id @default(uuid())
  examId            String   @unique
  exam              Exam     @relation(fields: [examId], references: [id], onDelete: Cascade)
  questionCount     Int
  questionTypes     Json
  topicDistribution Json
  difficultyScore   Float
  summary           String
  createdAt         DateTime @default(now())

  @@map("exam_analyses")
}

model ProfessorRating {
  id              String    @id @default(uuid())
  professorId     String
  professor       Professor @relation(fields: [professorId], references: [id], onDelete: Cascade)
  userId          String
  user            User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  difficultyScore Int
  fairnessScore   Int
  comment         String?
  createdAt       DateTime  @default(now())

  @@map("professor_ratings")
}

// Phase 1 — Aggregated, cached style profile per professor.
// Populated lazily on first visit, invalidated when a new exam is analyzed.
model ProfessorStyleProfile {
  id          String    @id @default(uuid())
  professorId String    @unique
  professor   Professor @relation(fields: [professorId], references: [id], onDelete: Cascade)

  aggregatedData Json // { questionTypes, topicDistribution, difficulty }
  geminiSummary  String @db.Text
  topTopics      Json // [{ topic, frequency }]
  evolution      Json // [{ year, questionTypes, difficulty }]
  metrics        Json // { totalExams, avgDifficulty, avgQuestionCount, dominantType }

  examSourceCount Int
  geminiVersion   String
  isStale         Boolean @default(false)

  // Concurrency guard for lazy regeneration — set when a build starts, cleared on completion.
  regenerationStartedAt DateTime?

  generatedAt DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([isStale])
  @@map("professor_style_profiles")
}

// Phase 1 — Telemetry for every AI provider call (Gemini, Claude, …).
// Used for cost tracking, quality monitoring, and cache-hit analysis.
model AICallLog {
  id           String  @id @default(uuid())
  userId       String?
  user         User?   @relation(fields: [userId], references: [id], onDelete: SetNull)
  feature      String // "analyze-exam" | "style-summary" | "study-pack" | ...
  provider     String // "gemini" | "claude" | ...
  model        String // e.g. "gemini-2.5-flash-lite"
  inputTokens  Int
  outputTokens Int
  // Estimated cost at *paid-tier* pricing; always populated for capacity
  // planning. When `freeTier` is true the call was not actually billed.
  costUsd      Float
  // True if the call ran on Google AI Studio free-tier quota (no billing).
  // Lets us run `SUM(costUsd) WHERE freeTier = false` for real spend and
  // `SUM(costUsd) WHERE freeTier = true` as a "would-cost-if-paid" projection.
  freeTier     Boolean @default(true)
  latencyMs    Int
  cacheHit     Boolean @default(false)
  success      Boolean
  errorCode    String?
  // Phase 6 task 6.8: true when a downstream fallback provider served
  // the response because the primary returned a retryable error. Paired
  // with `provider` so analytics can see "gemini attempted, claude
  // succeeded" rows as one entry.
  fallbackUsed Boolean @default(false)

  createdAt DateTime @default(now())

  feedback AIFeedback[]

  @@index([userId])
  @@index([feature])
  @@index([createdAt])
  @@map("ai_call_logs")
}

// Phase 1 — User-facing feedback on AI outputs (thumbs up / down / neutral).
model AIFeedback {
  id      String     @id @default(uuid())
  userId  String
  user    User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  callId  String?
  call    AICallLog? @relation(fields: [callId], references: [id], onDelete: SetNull)
  feature String
  rating  Int // -1 | 0 | 1
  comment String?

  createdAt DateTime @default(now())

  @@index([userId])
  @@index([feature])
  @@map("ai_feedback")
}

// Phase 2 — User-uploaded study material (personal, private).
// Source for personalized study pack generation; extractedText is the
// plain-text payload fed into the Gemini prompt alongside the professor's
// style profile.
model StudentNote {
  id       String  @id @default(uuid())
  userId   String
  user     User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  courseId String?
  course   Course? @relation(fields: [courseId], references: [id], onDelete: SetNull)

  title         String
  fileUrl       String
  mimeType      String
  extractedText String @db.Text
  wordCount     Int

  createdAt DateTime @default(now())

  @@index([userId])
  @@index([courseId])
  @@map("student_notes")
}

// Phase 2 — Generated personalized study pack (topic summaries, practice
// questions, professor-specific trick patterns). Cache key is
// (userId, professorId, noteHash, promptVersion) so regenerating with the
// same notes + same prompt version short-circuits to the cached result
// until `expiresAt` passes (24h TTL by default).
model StudyPack {
  id          String    @id @default(uuid())
  userId      String
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  professorId String
  professor   Professor @relation(fields: [professorId], references: [id], onDelete: Cascade)

  // IDs of the StudentNote records this pack was built from. Sorted before
  // hashing so the same set of notes in any order produces the same
  // `noteHash` and hits the cache.
  noteIds  String[]
  // SHA-256 of concatenated extractedText (notes sorted by id). Stable
  // across re-orderings; changes when any note content changes.
  noteHash String

  topicSummaries    Json // [{ topic, content (markdown) }]
  practiceQuestions Json // [{ question, type, topic, difficulty, answer, rationale }]
  profStylePatterns Json // string[] — "trick" patterns surfaced from style profile

  geminiVersion String
  promptVersion String // e.g. "study-pack-v1"

  generatedAt DateTime @default(now())
  // Cache TTL — defaulted to generatedAt + 24h at create time.
  expiresAt   DateTime

  @@unique([userId, professorId, noteHash, promptVersion])
  @@index([userId])
  @@index([professorId])
  @@index([expiresAt])
  @@map("study_packs")
}

// Phase 3 — Generated mock exam. Cache key is
// (userId, professorId, noteHash, promptVersion) mirroring StudyPack, so the
// same student running the same material for the same professor reuses the
// generated question set for 24h. Per-attempt state lives on MockExamSession.
model MockExam {
  id          String    @id @default(uuid())
  userId      String
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  professorId String
  professor   Professor @relation(fields: [professorId], references: [id], onDelete: Cascade)

  // Source material. studyPackId is a convenience pointer; noteHash is what
  // actually keys the cache (a mock exam can be generated from raw notes even
  // if no study pack was persisted).
  studyPackId String?
  noteIds     String[]
  noteHash    String

  title            String
  // { q, type, options?, correctAnswer, topic, difficulty, rationale, rubric? }[]
  // Cached answer + rubric fields are never returned to the client while a
  // session is open; the grading service is the only consumer.
  questions        Json
  durationMin      Int    @default(90)
  // [{ title, startIdx, endIdx }] — logical breakdown used on the result page.
  sectionBreakdown Json?

  geminiVersion String
  promptVersion String // e.g. "mock-exam-v1"

  generatedAt DateTime @default(now())
  // Cache TTL — defaulted to generatedAt + 24h.
  expiresAt   DateTime

  sessions MockExamSession[]

  @@unique([userId, professorId, noteHash, promptVersion])
  @@index([userId])
  @@index([professorId])
  @@index([expiresAt])
  @@map("mock_exams")
}

// Phase 3 — Per-attempt state. Never cached: each submission is a fresh row.
// `answers` / `feedback` / `prediction` / `topicGaps` are all JSON blobs whose
// shapes are owned by mockExamGradingService + mockExamPredictionService.
model MockExamSession {
  id         String   @id @default(uuid())
  mockExamId String
  mockExam   MockExam @relation(fields: [mockExamId], references: [id], onDelete: Cascade)
  userId     String
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  // [{ qIdx, answer, timeSpentSec, flagged }]
  answers    Json
  score      Float?
  // [{ qIdx, correct, scoreOutOf100, feedback, suggestedTopic? }]
  feedback   Json?
  // { lowerBound, upperBound, confidence, reasoning }
  prediction Json?
  // [{ topic, correctCount, totalCount, accuracy, priority }]
  topicGaps  Json?

  startedAt     DateTime  @default(now())
  completedAt   DateTime?
  timeSpentSec  Int?
  // True when auto-submitted because the timer ran out.
  autoSubmitted Boolean   @default(false)

  @@index([userId])
  @@index([mockExamId])
  @@map("mock_exam_sessions")
}

// ========== Phase 4 — Community Layer ==========

// One balance row per user. `history` is a Json[] whose entries look like
//   { type: "earn" | "spend", amount: number, reason: string, refId?: string, at: ISO }
// so we don't need a separate ledger table for the spec's cadence (rule-based
// earn/spend, no partial refunds). Upgrading to a proper ledger is a Phase 5
// concern once volumes grow or admin adjustments enter the picture.
model UserCredit {
  userId    String   @id
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  balance   Int      @default(0)
  history   Json[]
  updatedAt DateTime @updatedAt

  @@map("user_credits")
}

// One approval row per (exam, user) — composite PK enforces the "one vote
// per person per exam" rule. `approved: true` counts toward the 3-threshold
// that flips `Exam.verified`; `approved: false` counts toward `Exam.flagged`.
// The uploader can never vote on their own exam (checked in service layer).
model ExamApproval {
  examId    String
  exam      Exam     @relation(fields: [examId], references: [id], onDelete: Cascade)
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  approved  Boolean
  // Optional short note captured on a downvote; used by future moderation
  // (Phase 5) but never surfaced publicly.
  reason    String?
  createdAt DateTime @default(now())

  @@id([examId, userId])
  @@index([examId])
  @@index([userId])
  @@map("exam_approvals")
}

// Vote against any AI-generated question. `questionId` is a synthetic key
// built by the caller:
//   studyPack:<packId>:q<idx>
//   mockExam:<examId>:q<idx>
// `direction` is -1 / +1 (0 is not stored). `cameOnExam` is independent of
// direction — a student can upvote a useful question AND mark that it
// appeared on the real exam later. Both signals feed the "verified" pool.
model QuestionVote {
  questionId String
  userId     String
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  direction  Int
  cameOnExam Boolean?
  createdAt  DateTime @default(now())

  @@id([questionId, userId])
  @@index([questionId])
  @@index([userId])
  @@map("question_votes")
}

// Post-exam autopsy. One row per (user, professor, examDate) — unique so a
// student cannot skew aggregates by resubmitting. `anonymizedHash` is a
// salted SHA-256 of (userId + examDate + POST_EXAM_SALT) — aggregation
// views derive from this, never from `userId`.
model PostExamReport {
  id                 String   @id @default(uuid())
  userId             String
  user               User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  professorId        String
  courseId           String?
  examDate           DateTime
  // [{ topic: string, frequency: "once" | "few" | "many", difficulty: 1..5 }]
  reportedTopics     Json
  notes              String?
  // Optional self-reported final grade (0-100) + letter. Feeds the Phase 4
  // "A students strategy" aggregation when ≥5 high performers have reported.
  selfReportedGrade  Int?
  selfReportedLetter String?
  anonymizedHash     String

  createdAt DateTime @default(now())

  @@unique([userId, professorId, examDate])
  @@index([professorId])
  @@index([examDate])
  @@map("post_exam_reports")
}

enum StudyGroupStatus {
  SUGGESTED
  ACTIVE
  CLOSED
}

// Study group — either auto-suggested by the matcher job or manually
// joined. `members` is an implicit many-to-many via the StudyGroupMembers
// relation. `externalLink` is opt-in and must pass the whitelist
// (whatsapp / discord) validated in the service layer.
model StudyGroup {
  id           String           @id @default(uuid())
  professorId  String
  courseId     String?
  examDate     DateTime?
  externalLink String?
  status       StudyGroupStatus @default(SUGGESTED)

  members User[] @relation("StudyGroupMembers")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([professorId])
  @@index([examDate])
  @@map("study_groups")
}

// ---------------------------------------------------------------------
// Phase 5 — Academic DNA + persistent memory
// ---------------------------------------------------------------------

// Per-user aggregation of what they've been learning: which topics they
// handle well, which ones trip them up, and which format their brain
// seems to grok best. Recomputed on a cache-first + event-driven basis
// — see `Exam.verified` invalidation hook in examApprovalService plus
// the on-submit trigger in mockExamService. Under 20 answered questions
// we treat the data as insufficient and skip inference.
model AcademicDNA {
  userId String @id
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  learningStyle          String? // "visual" | "reading" | "kinesthetic" | "mixed" | null
  strengths              Json // [{topic, score, confidence, sampleSize}]
  weaknesses             Json // same shape
  totalQuestionsAnswered Int     @default(0)
  correctRate            Float?
  preferredDifficulty    String? // "easy" | "medium" | "hard"

  // Algorithm version. Bumping this in `dnaService` invalidates all
  // stored DNAs (they'll be lazily recomputed on next read).
  version        Int      @default(1)
  lastComputedAt DateTime @default(now())
  updatedAt      DateTime @updatedAt

  @@map("academic_dna")
}

// Per-(user, topic) readiness score on a 0-100 scale. Mock-exam submit
// hook recomputes affected topics; dashboard's "bu hafta çalışman
// gereken 3 konu" widget reads the lowest scores.
model ConfidenceScore {
  userId            String
  user              User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  topic             String
  score             Float // 0-100
  lastQuestionCount Int      @default(0)
  source            String // "mock_exam" | "practice" | "self_report"
  updatedAt         DateTime @updatedAt

  @@id([userId, topic])
  @@index([userId])
  @@map("confidence_scores")
}

// Free-form grade history used by the GPA simulator. `courseId` links
// to an existing Course when the user picks from autocomplete; else
// `courseName` is the free-text fallback. `university` selects which
// grading formula (gpaFormulas.ts preset) to use at compute time.
model GradeRecord {
  id          String   @id @default(uuid())
  userId      String
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  courseId    String?
  courseName  String
  grade       Float // numeric grade (0-100) or 0-4 depending on system
  letterGrade String? // AA / BA / CB / ... — derived if null
  credit      Int
  semester    String // "2026-Spring" style
  university  String? // presets picker — "aydin" / "bogazici" / "odtu" / "custom"
  createdAt   DateTime @default(now())

  @@index([userId])
  @@index([userId, semester])
  @@map("grade_records")
}

// SM-2 scheduling row per (user, question). When a mock-exam answer
// comes back wrong, the scheduler enqueues a repetition here with
// interval=1, easiness=2.5. Each subsequent review adjusts interval +
// easiness per simplified SM-2 (see spacedRepetitionService).
// `questionText` is a snapshot so the review card renders even if the
// source question is deleted.
model SpacedRepetition {
  id            String    @id @default(uuid())
  userId        String
  user          User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  questionId    String
  questionText  String?
  nextReview    DateTime
  interval      Int // days until next review
  easiness      Float     @default(2.5)
  correctStreak Int       @default(0)
  lapseCount    Int       @default(0)
  lastReviewed  DateTime?
  createdAt     DateTime  @default(now())

  @@unique([userId, questionId])
  @@index([userId, nextReview])
  @@map("spaced_repetitions")
}

// ======================================================================
// Phase 6 — Multimodal + Live AI Tutor (task 6.8)
// ======================================================================

// A completed voice tutor session. Persisted at end-of-session; while the
// session is live the transcript lives in memory + a pub/sub stream (see
// voiceTutorService). `sourceType` distinguishes real-time tutor chats
// from offline lecture audio uploads so both flows can reuse the same
// table for analytics while keeping their UX separate.
model VoiceSession {
  id             String     @id @default(uuid())
  userId         String
  user           User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  professorId    String?
  professor      Professor? @relation(fields: [professorId], references: [id], onDelete: SetNull)
  sourceType     String     @default("live") // "live" | "lecture"
  durationSec    Int
  transcript     String     @db.Text
  topics         Json // [{ topic, startSec, endSec }]
  provider       String // "gemini-live" | "claude" | "openai-realtime"
  interruptCount Int        @default(0)
  fallbackUsed   Boolean    @default(false)
  costUsd        Decimal?   @db.Decimal(10, 6)
  createdAt      DateTime   @default(now())

  @@index([userId, createdAt])
  @@index([professorId])
  @@map("voice_sessions")
}

// Per-user rolling window for the 30min/day cap. Keyed on `date` in UTC —
// `voiceTutorService.startSession` refuses to start when totalSec >=
// VOICE_DAILY_SEC_CAP. Kept as a separate table (rather than aggregating
// from VoiceSession on each start) so the cap read is a single indexed
// lookup even as the session log grows.
model VoiceUsage {
  userId       String
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  date         DateTime @db.Date
  totalSec     Int      @default(0)
  sessionCount Int      @default(0)
  updatedAt    DateTime @updatedAt

  @@id([userId, date])
  @@map("voice_usage")
}

// A single OCR extraction job, persisted whether the primary provider
// succeeded or the fallback kicked in. `latexFormulas` carries an
// optional per-formula `confidence` so the UI can flag low-confidence
// formulas for manual review.
model OCRResult {
  id            String   @id @default(uuid())
  userId        String
  user          User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  fileUrl       String
  mimeType      String
  extractedText String   @db.Text
  latexFormulas Json // [{ latex, confidence, bbox? }]
  confidence    Float // 0-1 overall
  provider      String // "gemini-multimodal" | "vision-api" | "tesseract"
  processingMs  Int
  createdAt     DateTime @default(now())

  @@index([userId, createdAt])
  @@map("ocr_results")
}

// Web Push subscription handle. One row per browser — `endpoint` is the
// unique subscription URL returned by PushManager.subscribe; p256dh +
// auth keys are required to sign payloads. Devices are pruned when the
// push service replies 410 Gone.
model PushDevice {
  id         String   @id @default(uuid())
  userId     String
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  endpoint   String   @unique
  p256dhKey  String   @db.Text
  authKey    String   @db.Text
  userAgent  String?
  lastSeenAt DateTime @default(now())
  createdAt  DateTime @default(now())

  @@index([userId])
  @@map("push_devices")
}

// ======================================================================
// Phase 7 — B2B + marketplace + payments (task 7.10)
// ======================================================================

// A verified tutor on the marketplace. `specializations` + `availability`
// are Json because the tutor picks arbitrary subject/level tuples; the
// matching engine (tutorMatchingService) reads them rather than the DB
// doing the filtering. `embedding` holds the bio+specializations vector
// used by pgvector cosine search — populated lazily by the marketplace
// indexing worker (7.18) after approve.
model Tutor {
  id              String    @id @default(uuid())
  userId          String    @unique
  user            User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  bio             String    @db.Text
  hourlyRate      Int // TL
  specializations Json // [{ subject, level, tags[] }]
  availability    Json // [{ dayOfWeek, startHour, endHour }]
  rating          Float?
  totalSessions   Int       @default(0)
  verifiedAt      DateTime?
  status          String    @default("pending") // pending | active | suspended
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt

  sessions TutoringSession[]

  @@index([status])
  @@index([rating])
  @@map("tutors")
}

// A single student ↔ tutor booking. Status transitions:
//   scheduled → completed | cancelled | no_show | disputed
// `paymentId` links 1:1 to the Payment row that funded the session.
model TutoringSession {
  id          String    @id @default(uuid())
  tutorId     String
  tutor       Tutor     @relation(fields: [tutorId], references: [id], onDelete: Cascade)
  studentId   String
  student     User      @relation("TutoringAsStudent", fields: [studentId], references: [id], onDelete: Cascade)
  scheduledAt DateTime
  durationMin Int
  status      String // scheduled | completed | cancelled | disputed | no_show
  rating      Float?
  feedback    String?
  price       Int // TL
  meetingUrl  String?
  paymentId   String?   @unique
  createdAt   DateTime  @default(now())
  completedAt DateTime?

  @@index([tutorId, scheduledAt])
  @@index([studentId, scheduledAt])
  @@index([status])
  @@map("tutoring_sessions")
}

// Marketplace listing — student-authored notes or study guides for sale.
// `fileUrl` stores the R2 object key (or /uploads path in local mode)
// produced by storage.put(); the controller converts it to a signed URL
// only after purchase verification. `embedding` is populated by the
// indexing worker after approve so the search endpoint can rank via
// pgvector cosine distance.
model MarketplaceItem {
  id           String   @id @default(uuid())
  sellerId     String
  seller       User     @relation(fields: [sellerId], references: [id], onDelete: Cascade)
  type         String // "notes" | "study_guide"
  title        String
  description  String   @db.Text
  price        Int // TL
  fileUrl      String
  previewText  String?  @db.Text
  tags         Json // string[]
  rating       Float?
  totalSales   Int      @default(0)
  approved     Boolean  @default(false)
  approvedById String?
  approvedBy   User?    @relation("MarketplaceApprovedBy", fields: [approvedById], references: [id], onDelete: SetNull)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  @@index([approved, type])
  @@index([sellerId])
  @@map("marketplace_items")
}

// Payment row — covers subscription, marketplace purchase, tutoring
// session. `amount` is kuruş (TRY's smallest unit) so we never lose
// fractional lira to float arithmetic. `externalId` is the iyzico /
// Stripe transaction id and carries a unique constraint so webhook
// retries are idempotent. `metadata` stashes the feature-specific link
// (`marketplaceItemId`, `tutoringSessionId`, `subscriptionPlan`) so
// the webhook handler can fan out side-effects.
model Payment {
  id          String    @id @default(uuid())
  userId      String
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  type        String // "subscription" | "marketplace" | "tutoring"
  amount      Int // kuruş
  currency    String    @default("TRY")
  status      String // pending | succeeded | failed | refunded | disputed
  provider    String // "iyzico" | "stripe"
  externalId  String?   @unique
  metadata    Json?
  createdAt   DateTime  @default(now())
  completedAt DateTime?

  @@index([userId, createdAt])
  @@index([status])
  @@index([type])
  @@map("payments")
}

// B2B tenant. A UniversityAccount groups Users (seats) under a
// subscription tier. `seats` is the head count the contract paid for;
// the university admin UI enforces this at add-user time. `ssoMetadata`
// parks the uploaded SAML XML until 7.25 completes — real SP<->IdP
// wiring is Phase 8.
model UniversityAccount {
  id           String   @id @default(uuid())
  universityId String   @unique // slug: "aydin" | "bogazici" | ... (matches seed data)
  contactEmail String
  tier         String // basic | pro | enterprise
  seats        Int
  renewalDate  DateTime
  ssoMetadata  String?  @db.Text
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  users User[]

  @@map("university_accounts")
}
